Clear all output from Chapter 1 and remove debugging comments

--- a/notebooks/01.09-reading-images.ipynb
+++ b/notebooks/01.09-reading-images.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,49 +48,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate some fake images\n"
+    "## Generate some fake images\n",
+    "\n",
+    "The cells below generate some fake images to use later in the notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "path/to/my/images/img-0000.fits\n",
-      "path/to/my/images/img-0001.fits\n",
-      "path/to/my/images/img-0002.fits\n",
-      "path/to/my/images/img-0003.fits\n",
-      "path/to/my/images/img-0004.fits\n",
-      "path/to/my/images/img-0005.fits\n",
-      "path/to/my/images/img-0006.fits\n",
-      "path/to/my/images/img-0007.fits\n",
-      "path/to/my/images/img-0008.fits\n",
-      "path/to/my/images/img-0009.fits\n",
-      "path/to/my/images/img-0010.fits\n",
-      "path/to/my/images/img-0011.fits\n",
-      "path/to/my/images/img-0012.fits\n",
-      "path/to/my/images/img-0013.fits\n",
-      "path/to/my/images/img-0014.fits\n",
-      "path/to/my/images/img-0015.fits\n",
-      "path/to/my/images/img-0016.fits\n",
-      "path/to/my/images/img-0017.fits\n",
-      "path/to/my/images/img-0018.fits\n",
-      "path/to/my/images/img-0019.fits\n",
-      "path/to/my/images/img-0020.fits\n",
-      "path/to/my/images/img-0021.fits\n",
-      "path/to/my/images/img-0022.fits\n",
-      "path/to/my/images/img-0023.fits\n",
-      "path/to/my/images/img-0024.fits\n",
-      "path/to/my/images/img-0025.fits\n",
-      "path/to/my/images/img-0026.fits\n",
-      "path/to/my/images/img-0027.fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from itertools import cycle\n",
@@ -165,20 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x1516016390>]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_name = 'img-0001.fits'\n",
     "\n",
@@ -197,27 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SIMPLE  =                    T / conforms to FITS standard                      \n",
-       "BITPIX  =                  -64 / array data type                                \n",
-       "NAXIS   =                    2 / number of array dimensions                     \n",
-       "NAXIS1  =                  200                                                  \n",
-       "NAXIS2  =                  300                                                  \n",
-       "IMAGETYP= 'BIAS    '                                                            \n",
-       "EXPOSURE=                  0.0                                                  \n",
-       "BUNIT   = 'adu     '                                                            "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hdu = hdu_list[0]\n",
     "hdu.header"
@@ -225,32 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.91962546, -0.94398497,  0.24254976, ..., -1.33550249,\n",
-       "        -0.92099482,  1.73339116],\n",
-       "       [-0.26848847,  0.64501649,  0.09068821, ...,  1.64452457,\n",
-       "         0.94857587,  0.55936338],\n",
-       "       [-0.35847435,  0.11360779, -0.50357318, ...,  0.40934905,\n",
-       "        -1.78763228,  1.06970558],\n",
-       "       ...,\n",
-       "       [-0.25411335,  0.05358174,  1.50695881, ..., -1.60197614,\n",
-       "        -0.628959  , -0.23650373],\n",
-       "       [ 1.14317143,  0.95321118,  0.3985287 , ..., -0.66414859,\n",
-       "        -0.63215069, -0.53788723],\n",
-       "       [-1.1468373 , -0.39698568, -0.15371635, ..., -1.78283199,\n",
-       "        -1.33742184, -1.00997915]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hdu.data"
    ]
@@ -268,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,59 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SIMPLE  =                    T / conforms to FITS standard                      \n",
-       "BITPIX  =                  -64 / array data type                                \n",
-       "NAXIS   =                    2 / number of array dimensions                     \n",
-       "NAXIS1  =                  200                                                  \n",
-       "NAXIS2  =                  300                                                  \n",
-       "IMAGETYP= 'BIAS    '                                                            \n",
-       "EXPOSURE=                  0.0                                                  \n",
-       "BUNIT   = 'adu     '                                                            "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ccd.header"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.91962546, -0.94398497,  0.24254976, ..., -1.33550249,\n",
-       "        -0.92099482,  1.73339116],\n",
-       "       [-0.26848847,  0.64501649,  0.09068821, ...,  1.64452457,\n",
-       "         0.94857587,  0.55936338],\n",
-       "       [-0.35847435,  0.11360779, -0.50357318, ...,  0.40934905,\n",
-       "        -1.78763228,  1.06970558],\n",
-       "       ...,\n",
-       "       [-0.25411335,  0.05358174,  1.50695881, ..., -1.60197614,\n",
-       "        -0.628959  , -0.23650373],\n",
-       "       [ 1.14317143,  0.95321118,  0.3985287 , ..., -0.66414859,\n",
-       "        -0.63215069, -0.53788723],\n",
-       "       [-1.1468373 , -0.39698568, -0.15371635, ..., -1.78283199,\n",
-       "        -1.33742184, -1.00997915]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ccd.data"
    ]
@@ -352,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,72 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<i>Table masked=True length=28</i>\n",
-       "<table id=\"table103462407976\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>file</th><th>simple</th><th>bitpix</th><th>naxis</th><th>naxis1</th><th>naxis2</th><th>imagetyp</th><th>exposure</th><th>bunit</th><th>filter</th><th>object</th></tr></thead>\n",
-       "<thead><tr><th>str13</th><th>bool</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>str5</th><th>float64</th><th>str3</th><th>object</th><th>object</th></tr></thead>\n",
-       "<tr><td>img-0000.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0001.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0002.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0003.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0004.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0005.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>5.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0006.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>30.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0007.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>5.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0008.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>30.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>img-0009.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>5.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>img-0018.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
-       "<tr><td>img-0019.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
-       "<tr><td>img-0020.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
-       "<tr><td>img-0021.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
-       "<tr><td>img-0022.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
-       "<tr><td>img-0023.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
-       "<tr><td>img-0024.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
-       "<tr><td>img-0025.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
-       "<tr><td>img-0026.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
-       "<tr><td>img-0027.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Table masked=True length=28>\n",
-       "     file     simple bitpix naxis naxis1 ... exposure bunit filter object\n",
-       "    str13      bool  int64  int64 int64  ... float64   str3 object object\n",
-       "------------- ------ ------ ----- ------ ... -------- ----- ------ ------\n",
-       "img-0000.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
-       "img-0001.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
-       "img-0002.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
-       "img-0003.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
-       "img-0004.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
-       "img-0005.fits   True    -64     2    200 ...      5.0   adu     --     --\n",
-       "img-0006.fits   True    -64     2    200 ...     30.0   adu     --     --\n",
-       "img-0007.fits   True    -64     2    200 ...      5.0   adu     --     --\n",
-       "img-0008.fits   True    -64     2    200 ...     30.0   adu     --     --\n",
-       "img-0009.fits   True    -64     2    200 ...      5.0   adu     --     --\n",
-       "          ...    ...    ...   ...    ... ...      ...   ...    ...    ...\n",
-       "img-0018.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
-       "img-0019.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
-       "img-0020.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
-       "img-0021.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
-       "img-0022.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
-       "img-0023.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
-       "img-0024.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
-       "img-0025.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
-       "img-0026.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
-       "img-0027.fits   True    -64     2    200 ...     30.0   adu      V xx cyg"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "im_collection.summary"
    ]
@@ -461,19 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n",
-      "6.1\n",
-      "7.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for a_flat in im_collection.hdus(imagetyp='FLAT'):\n",
     "    print(a_flat.header['EXPOSURE'])"
@@ -488,21 +289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In file img-0018.fits the exposure is: 30.0 with standard deviation  1.0022074490439763\n",
-      "In file img-0020.fits the exposure is: 30.0 with standard deviation  0.9991078620421082\n",
-      "In file img-0022.fits the exposure is: 30.0 with standard deviation  1.0023580633672473\n",
-      "In file img-0024.fits the exposure is: 30.0 with standard deviation  1.000477776445242\n",
-      "In file img-0026.fits the exposure is: 30.0 with standard deviation  0.9993075844461872\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for a_flat, fname in im_collection.hdus(imagetyp='LIGHT', object='m82', return_fname=True):\n",
     "    print(f'In file {fname} the exposure is:', a_flat.header['EXPOSURE'], 'with standard deviation ', a_flat.data.std())"
@@ -517,44 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n",
-      "adu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for a_flat, fname in im_collection.ccds(bunit='ADU', return_fname=True):\n",
     "    print(a_flat.unit)"
@@ -562,29 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SIMPLE  =                    T / conforms to FITS standard                      \n",
-       "BITPIX  =                  -64 / array data type                                \n",
-       "NAXIS   =                    2 / number of array dimensions                     \n",
-       "NAXIS1  =                  200                                                  \n",
-       "NAXIS2  =                  300                                                  \n",
-       "IMAGETYP= 'LIGHT   '                                                            \n",
-       "EXPOSURE=                 30.0                                                  \n",
-       "FILTER  = 'V       '                                                            \n",
-       "OBJECT  = 'm82     '                                                            \n",
-       "BUNIT   = 'adu     '                                                            "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a_flat.header"
    ]
@@ -606,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
