--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cells below perform the actual clipping; you should generally use the astropy function `sigma_clip` to do this, but here we'll do it manually to illustrate the process.\n",
+    "The cells below perform the actual clipping; you should generally use the astropy function [`sigma_clip`](https://astropy.readthedocs.io/en/stable/stats/robust.html) to do this, but here we'll do it manually to illustrate the process.\n",
     "\n",
     "We begin by calculating the MAD standard deviation estimator for our data."
    ]
@@ -436,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
