Refactor code for dark current ideal case

--- a/notebooks/03.01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03.01-Dark-current-The-ideal-case.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_read_noise = 1"
+    "high_read_noise = 10"
    ]
   },
   {
@@ -245,28 +245,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_dark_with_distributions(image, rn, dark_rate, n_images=1,\n",
+    "                                 show_poisson=True, show_gaussian=True):\n",
+    "    h = plt.hist(image.flatten(), bins=20, align='mid', \n",
+    "                 density=True, label=\"Dark current counts\");\n",
+    "    bins = h[1]\n",
+    "    expected_mean_dark = dark_rate * exposure / gain\n",
+    "    pois = stats.poisson(expected_mean_dark * n_images)\n",
+    "    pois_x = np.arange(0, 300, 1)\n",
+    "\n",
+    "    new_area = np.sum(1/n_images * pois.pmf(pois_x))\n",
+    "\n",
+    "    if show_poisson:\n",
+    "        plt.plot(pois_x / n_images, pois.pmf(pois_x) / new_area, \n",
+    "                 label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(expected_mean_dark)) \n",
+    "    plt.xlim(-20, 30)\n",
+    "\n",
+    "    if show_gaussian:\n",
+    "        gauss = stats.norm(loc=expected_mean_dark, scale=rn / gain)\n",
+    "        gauss_x = np.linspace(*plt.xlim(), num=10000)\n",
+    "        plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
+    "        \n",
+    "    plt.xlabel(\"Dark counts in {} sec exposure\".format(exposure))\n",
+    "    plt.ylabel(\"Fraction of pixels (area normalized to 1)\")\n",
+    "    plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(20, 10))\n",
     "\n",
     "\n",
-    "h = plt.hist(darks[-1].flatten(), bins=20, align='mid', density=True, \n",
-    "             label=\"Histogram of dark current counts, single dark frame\");\n",
-    "bins = h[1]\n",
-    "expected_mean_dark = dark_rate * exposure / gain\n",
-    "pois = stats.poisson(expected_mean_dark)\n",
-    "pois_x = np.arange(0, 20, 1)\n",
+    "plot_dark_with_distributions(darks[-1], high_read_noise, dark_rate, n_images=1)\n",
     "\n",
-    "plt.plot(pois_x, pois.pmf(pois_x), \n",
-    "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain)) \n",
-    "\n",
-    "plt.xlim(-20, 30)\n",
-    "gauss = stats.norm(loc=expected_mean_dark, scale=high_read_noise / gain)\n",
-    "gauss_x = np.linspace(*plt.xlim())\n",
-    "plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
-    "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
-    "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
-    "plt.legend()\n",
-    "\n",
-    "plt.ylim(0, 1)\n",
+    "plt.ylim(0, 0.8)\n",
     "\n",
     "plt.grid()"
    ]
@@ -290,26 +306,9 @@
    "source": [
     "plt.figure(figsize=(20, 10))\n",
     "\n",
+    "plot_dark_with_distributions(image_average, high_read_noise, dark_rate, n_images=n_images)\n",
     "\n",
-    "h = plt.hist(image_average.flatten(), bins=20, align='mid', density=True, label=\"Histogram of dark current counts\");\n",
-    "bins = h[1]\n",
-    "expected_mean_dark = dark_rate * exposure / gain\n",
-    "pois = stats.poisson(expected_mean_dark * n_images)\n",
-    "pois_x = np.arange(0, 300, 1)\n",
-    "\n",
-    "new_area = np.sum(1/n_images * pois.pmf(pois_x))\n",
-    "\n",
-    "plt.plot(pois_x / n_images, pois.pmf(pois_x) / new_area, \n",
-    "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain)) \n",
-    "plt.xlim(-20, 30)\n",
-    "\n",
-    "gauss = stats.norm(loc=expected_mean_dark, scale=high_read_noise / gain)\n",
-    "gauss_x = np.linspace(*plt.xlim(), num=1000)\n",
-    "plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
-    "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
-    "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
-    "plt.legend()\n",
-    "plt.ylim(0, 1)\n",
+    "plt.ylim(0, 0.8)\n",
     "plt.grid()"
    ]
   },
@@ -392,7 +391,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_average.shape"
+    "pixels = np.random.randint(50, high=190, size=n_pixels)\n",
+    "pixel_values = np.zeros(n_images)\n",
+    "pixel_averages = np.zeros(n_images)\n",
+    "base_image = np.zeros([image_size, image_size])\n",
+    "darks = np.zeros([n_images, image_size, image_size])\n",
+    "\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "for n in range(n_images):\n",
+    "    darks[n] = dark_current(base_image, dark_rate, exposure, gain=gain, hot_pixels=False)\n",
+    "    darks[n] = darks[n] + read_noise(base_image, low_read_noise, gain=gain)\n",
+    "for pixel in pixels:\n",
+    "    for n in range(n_images):\n",
+    "        pixel_values[n] = darks[n, pixel, pixel]\n",
+    "    plt.plot(pixel_values, label='pixel [{0}, {0}]'.format(pixel), alpha=0.5)\n",
+    "    pixel_averages += pixel_values\n",
+    "\n",
+    "image_average = darks.mean(axis=0)\n",
+    "\n",
+    "plt.plot(pixel_averages / n_pixels, \n",
+    "         linewidth=3,\n",
+    "         label='Average over {} pixels'.format(n_pixels))\n",
+    "# plt.xlim(0, n_images - 1)\n",
+    "plt.hlines(dark_rate * exposure / gain, *plt.xlim(), \n",
+    "           linewidth=3, \n",
+    "           label=\"Expected counts\")\n",
+    "plt.xlabel('Image number')\n",
+    "plt.ylabel('Counts due to dark current')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "\n",
+    "plot_dark_with_distributions(darks[-1], low_read_noise, dark_rate, n_images=1)\n",
+    "\n",
+    "plt.ylim(0, 0.8)\n",
+    "\n",
+    "plt.grid()"
    ]
   },
   {
