Add text about dark current

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reality: most of your dark frame is noise and not all of the time dependent artifacts are dark current\n"
+    "# Reality: most of your dark frame is noise and not all of the time dependent artifacts are dark current"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "\n",
     "This camera has a dark current of $0.01 e^-$/sec/pixel and read noise of roughly $10 e^-$/read/pixel/. An exposure time of 1000 sec means an expected dark level in each exposure of $10 e^-$. By combining 20 of the images, the expected noise in the combination is reduced by a factor of $\\sqrt{20}$ to $2.2 e^-$/pixel. \n",
     "\n",
-    "Measuring the dark current once you have the images is relatively straightforward: subtract the bias, multiply the result by the gain and then divide by the exposure time to obtain the dark current."
+    "Measuring the dark current once you have the images is relatively straightforward: subtract the bias, multiply the result by the gain and then divide by the exposure time to obtain the dark current in $e^-$/pixel/sec."
    ]
   },
   {
@@ -53,11 +53,16 @@
     "\n",
     "While the vast majority of the pixels do, as expected, have very low dark current it is much higher for other pixels. The largest values in the image above are not accurate. They are the upper limit of this CCD's readout, 65563, converted to dark current. \n",
     "\n",
-    "NEED BETTER WORDS TO INTRODUCE THESE BULLETS:\n",
+    "There are a few ways one could handle this, which can be used in combination with each other:\n",
     "\n",
-    "+ Mark some of the pixels as \"bad\" and always discard those pixels. This is appropriate for the very high dark current pixels.\n",
-    "+ For the others, take dark frames to subtract those hot pixels.\n",
-    "+ Mark all of the pixels above some threshold as bad."
+    "+ Mark all pixels above some threshold as bad and create a mask to keep track of these bad pixels.\n",
+    "+ Mark only the really high dark current pixels as bad and mask them; for the rest, subtract dark current as usual.\n",
+    "+ Always take dark images with exposure times that match your flat and light frames and subtract dark current as usual.\n",
+    "+ Take one set of darks with exposure equal to the *longest* exposure time in your flat and light images and scale the dark current downwards to match your other exposure times.\n",
+    "\n",
+    "#### One thing NOT to do\n",
+    "\n",
+    "Do not take short dark frames and scale them up to longer exposure times. Modern cameras, even thermo-electrically cooled ones, have very low dark current. If your dark frames have low exposure time then most of the pixels are measuring read noise, not dark current. If you rescale those images to a longer exposure time then you inappropriately amplify that noise. Ideally, the expected dark counts (or dark electrons) in your dark frames should be at least a few times larger than the expected read noise in the frames you combine to make a reference dark."
    ]
   },
   {
